Compiler/tests/typing/good/testfile-struct-1.rs
struct S { }
fn main() { let mut s = S { }; }
