Compiler/tests/typing/bad/testfile-return-2.rs

fn f() -> i32 { 42; } fn main() {}
